removed page numbering on 2nd page of TOC, moved Vorwort after TOC, raised page numbers for Titelei, added place, date and name to Vorwort

--- a/chpt/0_FrontMatter.tex
+++ b/chpt/0_FrontMatter.tex
@@ -1,74 +1,11 @@
-\urlstyle{same}	% URLs in der gleichen Schriftart wie der Text
-\pagenumbering{gobble}
-\title{Archäologische Untersuchungen\\zur eisenzeitlichen Besiedlungsgeschichte des nordwestlichen Kongobeckens}
-\author{\parbox{.7\textwidth}{\normalsize\centering
- {Dissertation\\
- zur Erlangung des akademischen Grades\\
- Doktor der Philosophie\\
- in der Philosophischen Fakultät\\
- \vskip 5mm
- der Eberhard Karls Universität Tübingen
- {\LARGE 
- \vskip 25mm
-%\textbf{Teil I}
-% \textbf{Teil II}
- \vskip 5mm
-%\textbf{Text}
-}}}}
-% \textbf{Anhang}}}}}
-% \vskip 5mm
-\date{}%
-\publishers{\normalsize{%
- vorgelegt von\\
- {\Large Dirk Seidensticker\\[.5ex]}%
- aus Hoyerswerda\\[\baselineskip]
- \the\year				% gibt nur die Jahreszahl aus
- %Stand: \today		% für das genaue Datum
- }}
-\lowertitleback{%
- {%
- \begin{tabular}{ll} 
- Hauptberichterstatter: & Prof. Dr. Thomas Knopf\\ 
- Mitberichterstatter: & Prof. Dr. Manfred K. H. Eggert\\ 
- \end{tabular}
- \vskip 5mm
- }%Tag der mündlichen Prüfung: 20.12.2006}%
-}
-
-\maketitle
+\pagestyle{empty}
+\setcounter{secnumdepth}{3}		% Tiefe des Inhaltsverzeichnisses
+\setcounter{tocdepth}{3}
+\tableofcontents
 \cleardoublepage
 
-%\clearpage
-%\null\vfill
-%\thispagestyle{empty}
-%\begin{center}
-%\textit{Für Katharina}
-%\end{center}
-%\vfill
-%\clearpage
-
-%\cleardoublepage
-%
-%\pagenumbering{roman}
-%\chapter*{Erklärung}
-%\begin{multicols}{2}
-%\raggedcolumns
-%\noindent Ich erkläre hiermit, dass ich die zur Promotion eingereichte Arbeit mit dem Titel: \enquote{Archäologische Untersuchungen zur eisenzeitlichen Besiedlungsgeschichte des nordwestlichen Kongobeckens} selbständig verfasst, nur die angegebenen Quellen und Hilfsmittel benutzt und wörtlich oder inhaltlich übernommene Stellen als solche gekennzeichnet habe. Ich versichere an Eides statt, dass diese Angaben wahr sind und dass ich nichts verschwiegen habe. Mir ist bekannt, dass die falsche Abgabe einer Versicherung an Eides statt mit Freiheitsstrafe bis zu drei Jahren oder mit Geldstrafe bestraft wird.
-%\end{multicols}
-%\vspace{2.5em}
-%\noindent Tübingen, den 04. Oktober 2017
-%
-%\vspace{0.5em}
-%\noindent Dirk Seidensticker
-
-
-
-\cleardoublepage
-%\pagenumbering{roman}
 \thispagestyle{empty}
 \section*{Vorwort}
-%\addcontentsline{toc}{section}{Vorwort}
-%\chapter*{Vorwort}
 \addcontentsline{toc}{chapter}{\hspace{1.5em}Vorwort}
 \begin{multicols}{2}
 \raggedcolumns
@@ -78,7 +15,7 @@ Besonderen Dank schulde ich Manfred K.~H. Eggert, der mir nicht nur das Fundmate
 
 Von 2012 bis 2016 wurde die Arbeit durch Hans-Peter Wotzka, Forschungsstelle Afrika am Institut für Ur- und Frühgeschichte der Universität zu Köln, betreut. Für die wissenschaftliche Begleitung in dieser Zeit gebührt ihm mein Dank. Die vorliegende Arbeit versteht sich auch als Ergänzung zu der von ihm im Jahr 1995 veröffentlichten, wegweisenden Untersuchung zum Fundmaterial des \textit{River Reconnaissance Project} im Inneren Kongobecken. Zudem verdanke ich H.-P. Wotzka die Finanzierung von zwei Radiokohlenstoffdatierungen an Knochen eines Grabes in Maluba am Lua sowie die Analyse von Schlacken durch Jane Humphris und Ole Nordland. 
 
-Die in dieser Arbeit vorgelegten Untersuchungen zur Töpfereitechnologie, insbesondere die Analyse von Makrospuren, wäre nicht ohne die konstante Ermutigung und Unterstützung durch Anne Mayor (Genf) und \mbox{Alexandre} \mbox{Livingstone} Smith (Tervuren) möglich gewesen. Bei einer 2015 durchgeführte Reise nach Genf konnte ich erste Erfahrungen mit der entsprechenden Methodik sammeln. In Tervuren gewährte mir \mbox{Alexandre} Livingstone Smith Einblick in das damals in Bearbeitung befindliche Fundmaterial aus dem nordöstlichen Kongobecken. Für Hilfe und Unterstützung bei der Interpretation der Anschliffe danke ich Heiko Riemer (Köln).\columnbreak
+Die in dieser Arbeit vorgelegten Untersuchungen zur Töpfereitechnologie, insbesondere die Analyse von Makrospuren, wäre nicht ohne die konstante Ermutigung und Unterstützung durch Anne Mayor (Genf) und \mbox{Alexandre} \mbox{Livingstone} Smith (Tervuren) möglich gewesen. Bei einer 2015 durchgeführte Reise nach Genf konnte ich erste Erfahrungen mit der entsprechenden Methodik sammeln. In Tervuren gewährte mir \mbox{Alexandre} Livingstone Smith Einblick in das damals in Bearbeitung befindliche Fundmaterial aus dem nordöstlichen Kongobecken. Für Hilfe und Unterstützung bei der Interpretation der Anschliffe danke ich Heiko Riemer (Köln).
 
 Im Zuge des von Manfred K. H. Eggert geleiteten Projekts zur Restaurierung der Eisenfunde des Gräberfeldes in Campo, Südkamerun, wurden in den Restaurierungswerkstätten des Römisch-Germanischen Zentralmuseums Mainz (RGZM) auch Eisenobjekte der Fundplätze Pikunda und Munda restauriert.
 
@@ -88,23 +25,11 @@ Für anregende Diskussionen und Einsatz bei der Korrektur der Arbeit danke ich C
 
 Der finanziellen Unterstützung der Tübinger Universitätsstiftung ist es zu verdanken, dass diese Studie in der vorliegenden Form veröffentlicht werden kann. Für die gute Zusammenarbeit bei der Fertigstellung der Druckvorlage möchte ich mich beim Verlag Tübingen University Press, vor allem bei Sandra Binder bedanken.
 
-Schließlich möchte ich mich ganz besonders bei meiner Partnerin Katharina Jungnickel für ihre konstante Unterstützung bedanken. Sie hat mir geholfen, den Blick in der Schlussphase auf das Wesentliche zu lenken.
+Schließlich möchte ich mich ganz besonders bei meiner Partnerin Katharina Jungnickel für ihre konstante Unterstützung bedanken. Sie hat mir geholfen, den Blick in der Schlussphase auf das Wesentliche zu lenken. Ihr und meinen Eltern ist die vorliegende Arbeit gewidmet.
 
 Eine phonetisch korrekte Wiedergabe afrikanischer Bezeichnungen und Namen erfolgte aus technischen Gründen nicht. Ebenfalls habe ich bewusst auf ein Verzeichnis der Bildunterschriften verzichtet. Alle bibliographischen Informationen wurden in die Bildunterschriften integriert.
 
+\vspace{1em}
+\noindent Gent, im September 2021 \hfill Dirk Seidensticker
 \end{multicols}
-
-%\begin{multicols}{2}
-%\vspace{2.5em}
-%\noindent Gent, den ??. ??? 2020
-%\columnbreak
-%\vspace{.5em}
-%\noindent Dirk Seidensticker
-%\end{multicols}
-
-\setcounter{secnumdepth}{3}		% Tiefe des Inhaltsverzeichnisses
-\setcounter{tocdepth}{3}
-\tableofcontents
-\cleardoublepage
-
-\pagenumbering{gobble}
+\pagestyle{fancy}
