--- a/main.tex
+++ b/main.tex
@@ -1,21 +1,12 @@
 \input{chpt/0_Head}
 
-%\includeonly{chpt/6_Schluss}	% ermöglichst, nur einzelne Kapitel auszugeben
-
-%\sloppy	% großzügigeere Formatierung mit weniger Trennungen
-
 \begin{document}
+\pagenumbering{arabic}
+\setcounter{page}{5}
+
 \onecolumn
 \input{chpt/0_FrontMatter}
 
-% für einseitiges Dokument mit zwei Bänden 0_Head anpassen und zwei getrennte Main-Datei (Bd1 & Bd2) machen:
-% Bd1: Kap. 1--Ende \printbibliography
-% Bd2: Katalog--Tafeln
-
-%\twocolumn % AP-Stil
-%\part{Text}
-
-\pagenumbering{arabic}
 
 \include{chpt/1_Einleitung}
 \include{chpt/2_Methode}
