small changes to remove Schusterjungen

--- a/chpt/5-4-1_InneresKongobecken.tex
+++ b/chpt/5-4-1_InneresKongobecken.tex
@@ -32,7 +32,7 @@ Die chronologische Einordnung der keramischen Stilgruppen der Traditionen \texti
 
 Den Beginn der \textit{Tshuapa-Tradition} bildet die Keramik der Wema-Gruppe. Bei ihr handele es sich stilistisch gesehen um eine \enquote{späte, formal und ornamental stark vereinfachte Ausprägung der Bondongo-Keramik} (ebd. 171). Lediglich eine der drei vorliegenden Radiokohlenstoffdatierungen aus Kontexten mit Wema-Keramik (ebd. 171 Tab.~81; Tab.~\ref{tab:Wotzka1995-412_14C_Repr}) können nach Wotzkas Ansicht als repräsentativ für die Stilgruppe angesehen werden. Dieses eine Datum (GrN-13078) deckt einen Zeitraum vom \mbox{13.--14.~Jh.} n.~Chr. ab (ebd. 172). Zwischen die Keramik der Wema-Gruppe und jener der jüngeren Bolondo-Gruppe sei das Material der Bosanga-Gruppe zu verorten, welches zudem eine \enquote{stilistisch und stratigrafisch zu begründende Gleichzeitigkeit mit der Nkile-Gruppe} aufweise (ebd. 175). Wie im Fall der Wema-Gruppe, stehen auch für die Keramik der jüngeren Bolondo-Gruppe drei Radiokohlenstoffdatierungen zur Verfügung (ebd. 180 Tab.~88; Tab.~\ref{tab:Wotzka1995-412_14C_Repr}), von denen Wotzka (ebd. 181) jedoch lediglich das jüngste, bis mindestens in das 16.~Jh. zurückreichende Datum (KN-4203) als repräsentativ ansieht. Die beiden älteren Datierungen (Hv-12618, Hv-12625) ließen sich nicht mit der erarbeiten relativ-chronologischen Gliederung vereinen. Für die Bokone-Gruppe stellt Wotzka (ebd. 185) zusammenfassend fest, dass sie eine \enquote{sowohl stratigrafisch als auch stilistisch zu begründende relativ-chronologische Stellung zwischen dem Bolondo-Stil und der rezenten Ilemba-Bokonda-Keramik des Tshuapa-Gebietes} einnimmt. Dem Fundgut der Bokone-Gruppe ließen sich keine Radiokohlenstoffdatierungen zuordnen. Ebenfalls ohne absolut-chronologische Daten konnte für die Keramik der Bolombi-Gruppe \enquote{unter der Prämisse, dass es sich nicht um eine speziell verzierte Fazies der rezenten Tshuapa-Keramik handelt}, nur eine \enquote{relativ-chronologische Position zwischen dem Bokone- und dem Ilemba-Bokonda-Stil} postuliert werden (ebd. 187). Die Keramik der Ilemba-Bokonda-Gruppe repräsentiert die \enquote{rezente Töpferei des unteren Tshuapa-Gebietes} (ebd. 188) wie sie bei den Feldaufenthalten des \textit{River Reconnaissance Project} im Jahr 1983 noch beobachtet werden konnte.
 
-Die der \textit{Busira-Tradition} zugerechnete Keramik der Inkaka-Gruppe ließ sich nicht einwandfrei relativ-chronologisch einordnen. Basierend auf stilistischen Ähnlichkeiten sowie den Fundumständen eines Gefäßes aus Ngombe-Malala (Fpl.~89) schließt \textsc{Wotzka} (ebd. 196) auf eine \enquote{grundsätzlich subrezente Zeitstellung der Inkaka-Gruppe}. Die der Liyolongo-Gruppe zugerechnete Keramik spiegelt die 1983 beobachtete \enquote{rezente Töpferei in Liyolongo [Fpl.~85] am mittleren Busira} (ebd.) wider und bildet den rezenten Abschluss der keramischen Sequenz in dieser Region des Inneren Kongobeckens. Die rezente Töpferei im Bereich des oberen Maringa ließ sich 1985 in Yopoko beobachten (Fpl.~175; ebd. 197). 
+Die der \textit{Busira-Tradition} zugerechnete Keramik der Inkaka-Gruppe ließ sich nicht zweifelsfrei relativ-chronologisch einordnen. Basierend auf stilistischen Ähnlichkeiten sowie den Fundumständen eines Gefäßes aus Ngombe-Malala (Fpl.~89) schließt \textsc{Wotzka} (ebd. 196) auf eine \enquote{grundsätzlich subrezente Zeitstellung der Inkaka-Gruppe}. Die der Liyolongo-Gruppe zugerechnete Keramik spiegelt die 1983 beobachtete \enquote{rezente Töpferei in Liyolongo [Fpl.~85] am mittleren Busira} (ebd.) wider und bildet den rezenten Abschluss der keramischen Sequenz in dieser Region des Inneren Kongobeckens. Die rezente Töpferei im Bereich des oberen Maringa wurde 1985 in Yopoko beobachten und dokumentiert (Fpl.~175; ebd. 197). 
 
 Neben den referierten Stilgruppen definierte \textcite{Wotzka.1995} in dem von ihm untersuchten Fundgut einige stilistische und formale Einheiten, denen er zwar eigene Stilgruppen-Be"-zeich"-nungen gab, die aber eher regionale Ausprägungen überregionaler Gruppen darstellen. Eine dieser Gruppen ist die Lokongo-Gruppe, die \enquote{als regional geprägte Fazies des wesentlich weiträumiger verbreiteten Botendo-Stiles} (ebd. 200) angesehen werden kann. Die Malelembe-Gruppe hingegen kann als \enquote{lokale Variante des Nkile-Stiles} (ebd. 201) verstanden werden. Für die Keramik der Likuku-Gruppe konnte mit Blick auf die raren Vergleichsmöglichkeiten lediglich \enquote{eine in etwa mit dem Bokone-Stil identische Zeitstellung} (ebd.) postuliert werden. Die schwache Quellenlage für den lediglich als Provisorium konzeptualisierte Mpokioko-Stil lieferte nur spärliche Hinweise auf die chronologische Position. Ähnlichkeiten zu den Stilen Bolondo und Bokone legen eine Datierung im Bereich dieser beiden Gruppen nahe (ebd. 202). Die Keramik der Besongo-Gruppe kann als \enquote{zeitweise parallel zum Bondongo-Stil bestehendes, im wesentlichen aber jünger zu datierendes Phänomen} (ebd. 206) angesehen werden.
 
