--- a/chpt/5-4-3_Kamerun.tex
+++ b/chpt/5-4-3_Kamerun.tex
@@ -17,6 +17,4 @@ Des Weiteren beschreibt \textcite[254--257]{NlendNlend.20132014} einen ab dem fr
 
 Eine zweite, entwickeltere Phase der frühen Eisenzeit sieht \textcite[363--369, 368 Abb.~30.6]{GouemGouem.20102011} durch die Keramik der Bidjouka-Gruppe repräsentiert, die tief in die Oberfläche eingearbeitete, im Profil U-förmige Riefen sowie Kammwiegeband aufweist. Dieser Stil datiert zwischen das 1.--7.~Jh. n.~Chr. (ebd. 371 Abb.~33.6) und ist zeitgleich mit der Belegung des Gräberfeldes in Campo und der dort angetroffenen Keramik, die eine eigene Stilgruppe repräsentiert \parencite[98 Abb.~5.6]{Eggert.2016}. Die in das 1. Jh. v.~Chr. bis 3. Jh. n.~Chr. datierenden, 1998/99 an der Mündung des Sanaga ausgegrabenen Befunde aus Mouanko-Lobethal, dem benachbarten Mouanko-Epolo sowie dem auf der gegenüberliegenden Flussseite gelegenen Yatou\footnote{In Mouanko-Lobethal wurde unter anderem ein aus neun sich überlagernden Gruben bestehender Komplex sowie vier weitere Gruben untersucht \parencite[513]{Eggert.2002}.} erbrachten keramische Inventare, die Ähnlichkeiten zur Keramik der Gräber in Campo \parencites[239 Abb.~2]{Meister.2010}[98 Abb.~5.6]{Eggert.2016} sowie einer zeitgleichen Grube aufweisen \parencite[161 Abb.~3.5--10]{Seidensticker.2010c}. Diese Inventare zeichnen sich durch offene Schalenformen sowie Gefäße mit geschweifter Wandung, kurzem Hals und ausbiegenden Rändern aus \parencite[514--519 Abb.~7--12; Abb.~\ref{fig:swCameroon_Sequence}.13--14]{Eggert.2002}. Die Verzierung setzt sich vornehmlich aus Rillen oder Riefen sowie Kammeindrücken zusammen. Gefäße aus Grube 1 der am südlichen Ufer des Sanaga gelegenen Fundstelle Yatou (ebd. 519 Abb.~12.2--3) weisen hingegen schwache Ähnlichkeiten zur den diagnostischen Schalen der Pikunda-Munda-Gruppe auf (Kap.~\ref{sec:PKM-Gr}).\footnote{Wie diese haben die Gefäße aus Yatou einen scharfen Knick zwischen Ober- und Unterteil und einen runden Boden. Die Verzierung besteht wie bei der Pikunda-Munda-Gruppe aus horizontalen Bändern, wobei die Gefäße aus Yatou vornehmlich Kammeindrücke, in einem Fall ein aus einzelnen horizontalen Kammeindruck-Bändern gebildetes Fischgrätmuster, aufweisen und die Gefäßunterteile unverziert bleiben. Die Randgestaltung lässt wieder verstärkt Parallelen zwischen der Keramik aus Yatou und jener der Pikunda-Munda-Gruppe erkennen: die grundsätzlich ausbiegenden Ränder weisen eine auch bei der Pikunda-Munda-Keramik beobachtbaren, einbiegenden Randlippen auf (siehe Taf.~41.18, 45.2, 50.7, 52.6 und \textsc{Eggert} (2002: 519 Abb.~12.2--3).}
 
-Der jüngere Abschnitt der Älteren Eisenzeit im südwestlichen Kamerun, im Anschluss an die Mpoengu-Gruppe, wird von \textcite[379\,f.]{GouemGouem.20102011} in zwei Phasen unterteilt: eine erste vom 1.--4.~Jh. n.~Chr. datierende Phase mit Funden in Akonétyé, Minyin, Mouanko-Lobethal sowie Campo und eine zweite Phase, die zwischen das 4.--10.~Jh. n.~Chr. datiert und zu der Funde aus Bidjouka, Kribi-Mission catholique, Talla, Mpoengu, Eboundja 3, Bidou I, Bwambé Beach und Boussibilinga gezählt werden.\footnote{Eine in Mpoengu freigelegte Bestattung datiert in diese zweite Phase (\textsc{Gouem Gouem} 2010/2011: 305--317, 384--389).} Zur ersten Phase zählt \textsc{Gouem Gouem} (ebd.) auch die in das 1.--4.~Jh. n.~Chr. datierenden Funde aus dem am Mboro-Fluss nördlich von Ambam gelegenen Akonétye \parencite[184]{Meister.2008b}. Die untersuchten Bereiche der Fundstellen erbrachten nahezu zeitgleiche Gruben, jedoch zeigen sich zwischen den keramischen Inventaren der nördlichen sowie der südlichen Fundstellen deutliche formale Unterschiede. Die Gruben der südlichen Fundstelle waren zwischen 0,5--3,9\,m tief und enthielten Keramik, die sich durch hohe, leicht geschweifte Grundformen mit flachen Böden und ausbiegenden Rändern auszeichnet (Abb.~\ref{fig:swCameroon_Sequence}.12; ebd. 188 Abb.~5). Die Stücke sind vor allem mittels horizontal um die Gefäße laufenden, breiten in Wiegebandtechnik erzeugten Bändern sowie Rillen und kleineren Eindruck-Reihen verziert. Die fast zeitgleiche nördliche Fundstelle erbrachte eine komplett andersartige Keramik: gedrungenere Gefäße mit geschweifter Wandung und auffälligem Schulterabsatz. Ihre Verzierungen bestehen aus horizontalen Rillen an vornehmlich langen, konvexen Halsbereichen sowie bogen- beziehungsweise girlandenförmigen Rillenbündeln unterhalb der Schulterabsätze (Abb.~\ref{fig:swCameroon_Sequence}.10--11; ebd. 195 Abb.~10). Die jeweiligen Grubeninventare der beiden Fundstellen von Akonétye sind formal in sich äußerst homogen, unterscheiden sich untereinander aber diametral. Der Keramik der nördlichen Fundstelle aus Akonétye entsprechendes Material fand sich auch im zirka 20\,km entfernt gelegenen Minyin (\textsc{Meister \& Eggert} 2008: 196 Abb.~11)\footnote{Die Funde aus Minyin datieren in das 1. Jh. v.~Chr. bis 3. Jh. n.~Chr. (\textsc{Meister \& Eggert} 2008: 189 Tab.~1).} sowie östlich von Sangmélima in Akom \parencite[413 Abb.~6.1,10]{deSaulieu.2015}. In der gleichen Region wurde an einer Reihe von Orten zudem Keramik gefunden, die jener der südlichen Fundstelle von Akonétye entspricht (ebd.~410 Abb.~5).
-
-Die jüngeren Abschnitte der Keramiksequenz im südlichen Kamerun sind bislang kaum Gegenstand von archäologischer Forschung gewesen. Lediglich der von \textcite{Elouga.20002001} verfolgte ethno-archäologische Ansatz bei der Auseinandersetzung mit der Keramik der Region zwischen Yaoundé und dem Sanaga schloss auch die rezente Töpfereitradition mit ein. Jüngere keramische Formen sind überdies nur kursorisch beschriebe, so aus Dibamba, südlich von Douala \parencite{Saulieu.2017}.
+Der jüngere Abschnitt der Älteren Eisenzeit im südwestlichen Kamerun, im Anschluss an die Mpoengu-Gruppe, wird von \textcite[379\,f.]{GouemGouem.20102011} in zwei Phasen unterteilt: eine erste vom 1.--4.~Jh. n.~Chr. datierende Phase mit Funden in Akonétyé, Minyin, Mouanko-Lobethal sowie Campo und eine zweite Phase, die zwischen das 4.--10.~Jh. n.~Chr. datiert und zu der Funde aus Bidjouka, Kribi-Mission catholique, Talla, Mpoengu, Eboundja 3, Bidou I, Bwambé Beach und Boussibilinga gezählt werden.\footnote{Eine in Mpoengu freigelegte Bestattung datiert in diese zweite Phase (\textsc{Gouem Gouem} 2010/2011: 305--317, 384--389).} Zur ersten Phase zählt \textsc{Gouem Gouem} (ebd.) auch die in das 1.--4.~Jh. n.~Chr. datierenden Funde aus dem am Mboro-Fluss nördlich von Ambam gelegenen Akonétye \parencite[184]{Meister.2008b}. Die untersuchten Bereiche der Fundstellen erbrachten nahezu zeitgleiche Gruben, jedoch zeigen sich zwischen den keramischen Inventaren der nördlichen sowie der südlichen Fundstellen deutliche formale Unterschiede. Die Gruben der südlichen Fundstelle waren zwischen 0,5--3,9\,m tief und enthielten Keramik, die sich durch hohe, leicht geschweifte Grundformen mit flachen Böden und ausbiegenden Rändern auszeichnet (Abb.~\ref{fig:swCameroon_Sequence}.12; ebd. 188 Abb.~5). Die Stücke sind vor allem mittels horizontal um die Gefäße laufenden, breiten in Wiegebandtechnik erzeugten Bändern sowie Rillen und kleineren Eindruck-Reihen verziert. Die fast zeitgleiche nördliche Fundstelle erbrachte eine komplett andersartige Keramik: gedrungenere Gefäße mit geschweifter Wandung und auffälligem Schulterabsatz. Ihre Verzierungen bestehen aus horizontalen Rillen an vornehmlich langen, konvexen Halsbereichen sowie bogen- beziehungsweise girlandenförmigen Rillenbündeln unterhalb der Schulterabsätze (Abb.~\ref{fig:swCameroon_Sequence}.10--11; ebd. 195 Abb.~10). Die jeweiligen Grubeninventare der beiden Fundstellen von Akonétye sind formal in sich äußerst homogen, unterscheiden sich untereinander aber diametral. Der Keramik der nördlichen Fundstelle aus Akonétye entsprechendes Material fand sich auch im zirka 20\,km entfernt gelegenen Minyin (\textsc{Meister \& Eggert} 2008: 196 Abb.~11)\footnote{Die Funde aus Minyin datieren in das 1. Jh. v.~Chr. bis 3. Jh. n.~Chr. (\textsc{Meister \& Eggert} 2008: 189 Tab.~1).} sowie östlich von Sangmélima in Akom \parencite[413 Abb.~6.1,10]{deSaulieu.2015}. In der gleichen Region wurde an einer Reihe von Orten zudem Keramik gefunden, die jener der südlichen Fundstelle von Akonétye entspricht (ebd.~410 Abb.~5). Die jüngeren Abschnitte der Keramiksequenz im südlichen Kamerun sind bislang kaum Gegenstand von archäologischer Forschung gewesen. Lediglich der von \textcite{Elouga.20002001} verfolgte ethno-archäologische Ansatz bei der Auseinandersetzung mit der Keramik der Region zwischen Yaoundé und dem Sanaga schloss auch die rezente Töpfereitradition mit ein. Jüngere keramische Formen sind überdies nur kursorisch beschriebe, so aus Dibamba, südlich von Douala \parencite{Saulieu.2017}.
