--- a/chpt/5-4-4_Gabun.tex
+++ b/chpt/5-4-4_Gabun.tex
@@ -17,4 +17,4 @@ Die Okanda-Gruppe des mittleren Ogooué-Tals datiert ebenfalls in einen Zeitabsc
 
 Auf die drei Gruppen Oveng, Okanda und Otoumbi folgt die Nandá-Gruppe \parencite[300 Anm.~4, 338--340]{SanchezElipe.2015}, die von \textcite[628--631, 628 Abb.~7-68]{Clist.20042005} noch als \textit{Groupe~II} bezeichnet wurde und in das 10.--12. Jh. n.~Chr. datiert \parencite[357]{SanchezElipe.2016}.\footnote{\textsc{Sánchez-Elipe} u.~a. (2016: 355\,f.) postulieren für die Äquatorialguinea vorgelagerte Insel Corisco einen Abbruch der Besiedlungssequenz im 8.--10.~Jh. n.~Chr. In dieser Phase sind weder Gräber noch Siedlungsbefunde bekannt.} \textcite{Clist.20042005} gibt für den Beginn der Nandá-Gruppe noch das 7.~Jh. n.~Chr. an, stützt sich dabei aber auf eine Datierung mit einem Standardfehler von $\pm$140 Jahren (Beta-20784), die von \textcites[357]{SanchezElipe.2016} als nicht repräsentativ angesehen wird. Neben wenigen Fundstellen in der Region um Libreville \parencite[629 Abb.~7-69]{Clist.20042005} fand sich Keramik der Nandá-Gruppe auch auf der im Grenzgebiet zu Äquatorialguinea gelegenen Insel Corisco. Sie zeichnet sich durch Flaschen mit stark geschweifter Wandung und langen, zylindrischen Hälsen sowie einfach ausbiegenden Rändern aus \parencites[Abb.~\ref{fig:Gabon_Sequence}.10--11; ebd. 603--611 Abb.~7-47--7-55;][222 Abb.~6.41, 303--315 Abb.~7.46--7.58]{SanchezElipe.2015}[137 Abb.~18]{GonzalesRuibal.2012}. Die Wandungen der Nandá-Keramik sind häufig mit vertikalen Bändern aus parallelem Kammstrich oder Fischgrät-Muster verziert, während Ränder und Unterteile teilweise unverziert sind. Ein großer Teil der von Clist noch als \textit{Groupe~II} bezeichneten Nandá-Keramik stammt von der Fundstelle Sablière bei Libreville \parencite[600--614]{Clist.20042005} und der Insel Corisco \parencites{GonzalezRuibal.2011}{GonzalesRuibal.2012}.
 
-Im Umland von Libreville folgt auf die Nandá-Gruppe die Keramik der Angondjé-Gruppe, die mit den ersten europäischen Kontaktfunden, unter anderem Tabakpfeifen, zusammenfällt. Die Assoziation mit diesen Importen liefert auch einen \textit{terminus ante quem} für die von \textcite[691]{Clist.20042005} in das 10.--16. Jh. n.~Chr. datierte Angondjé-Keramik \parencites[siehe][224]{SanchezElipe.2015}[357\,f.]{SanchezElipe.2016}. Funde der Angondjé-Gruppe fanden sich vornehmlich im Umland von Libreville, im Nordwesten Gabuns \parencite[692 Abb.~7-122]{Clist.20042005}. Die Angondjé-Keramik zeichnet sich durch rundbodige Schalen mit scharfem Bauchknick aus \parencite[Abb.~\ref{fig:Gabon_Sequence}.12--13; ebd. 645--649 Abb.~7.81--7.85; ][187 Abb.~6.20, 223--224 Abb.~6.42--6.43]{SanchezElipe.2015}, die grundsätzliche Ähnlichkeiten zu den entsprechenden Schalen des Typs F3 der Stilgruppen Pikunda-Munda (Kap.~\ref{sec:PKM-Gr}) sowie Mobaka (Kap.~\ref{sec:MKA-Gr}) aus dem Arbeitsgebiet zeigen. Die Schalen der Angondjé-Gruppe weisen oberhalb des Bauchknicks häufig eine Ritzverzierung aus diagonalen bis schachbrettartigen Mustern und Eindrücke auf.\vfill 
+Im Umland von Libreville folgt auf die Nandá-Keramik die Angondjé-Gruppe, die mit den ersten europäischen Kontaktfunden, unter anderem Tabakpfeifen, zusammenfällt. Die Assoziation mit diesen Importen liefert auch einen \textit{terminus ante quem} für die von \textcite[691]{Clist.20042005} in das 10.--16. Jh. n.~Chr. datierte Angondjé-Keramik \parencites[siehe][224]{SanchezElipe.2015}[357\,f.]{SanchezElipe.2016}. Funde der Angondjé-Gruppe fanden sich vornehmlich im Umland von Libreville, im Nordwesten Gabuns \parencite[692 Abb.~7-122]{Clist.20042005}. Die Angondjé-Keramik zeichnet sich durch rundbodige Schalen mit scharfem Bauchknick aus \parencite[Abb.~\ref{fig:Gabon_Sequence}.12--13; ebd. 645--649 Abb.~7.81--7.85; ][187 Abb.~6.20, 223--224 Abb.~6.42--6.43]{SanchezElipe.2015}, die grundsätzliche Ähnlichkeiten zu den entsprechenden Schalen des Typs F3 der Stilgruppen Pikunda-Munda (Kap.~\ref{sec:PKM-Gr}) sowie Mobaka (Kap.~\ref{sec:MKA-Gr}) aus dem Arbeitsgebiet zeigen. Die Schalen der Angondjé-Gruppe weisen oberhalb des Bauchknicks häufig eine Ritzverzierung aus diagonalen bis schachbrettartigen Mustern und Eindrücke auf. 
