corrected wrong font of url's

--- a/chpt/0_Head.tex
+++ b/chpt/0_Head.tex
@@ -137,7 +137,7 @@
 \usepackage{todonotes}				% lässt todo's im code zu
 \usepackage[hidelinks]{hyperref}	% erstellt die farbigen Links im PDF und gibt die Möglichkeit URLs einzugeben
 
-
+\urlstyle{same}
 
 
 % #########################################################
