--- a/chpt/KatA3_MLB85_1-4-3.tex
+++ b/chpt/KatA3_MLB85_1-4-3.tex
@@ -65,7 +65,7 @@ Die Eingrabung ließ sich durch ein Querprofil deutlich erfassen (Abb.~\ref{fig:
 
 \begin{figure*}[p]
 	\begin{minipage}[b]{.4\textwidth}
- 		\caption{MLB 85/1-4-3: Erhaltene Skelettelemente (grün: vorhanden, hellgrün: fragmentiert vorhanden und durch Fotos belegt).}\label{fig:MLB85-1_SekBest_Skelettbild}
+ 		\caption{MLB 85/1-4-3: Erhaltene Skelettelemente (schwarz: vorhanden, grau: fragmentiert vorhanden und durch Fotos belegt).}\label{fig:MLB85-1_SekBest_Skelettbild}
 	\end{minipage}\hfill
 	\begin{minipage}[b]{.55\textwidth}
  		\includegraphics[width=\textwidth]{fig/MLB85-143_Skelettbild_2013-11-09.jpg}
