converted figures to CMYK for print

--- a/bib/bib.bib
+++ b/bib/bib.bib
@@ -1632,7 +1632,7 @@ address = {Bonn}
 @article{Eggert.2016c,
  author = {Eggert, Manfred K. H.},
  year = {2016},
-  title = {Genetizing {{Bantu}}: {{Historical Insight}} or {{Historical Trilemma}}?},
+  title = {Geneticizing {{Bantu}}: {{Historical Insight}} or {{Historical Trilemma}}?},
  pages = {79--90},
  volume = {4},
  issn = {2412-3196},
