--- a/chpt/KatA17_MUN87_2-1-3.tex
+++ b/chpt/KatA17_MUN87_2-1-3.tex
@@ -71,7 +71,7 @@ Etwa 0,35\,m nördlich des Befundes MUN~87/2-1-1 (Kat.-Nr.~16) wurde an der Ober
 	\label{fig:MUN87.2-1-3_Planum+Profil_Zeichnung}
 \end{figure*}
 
-Die obere Gefäßsetzung besteht aus fünf Schalen des Typs E3 (Taf.~92.1--4, 6), die sich um Gefäß 8 (Taf.~92.8), ein hohes Gefäß mit langer Schulter und ausbiegendem Rand vom Typ B1, und einen Teller oder Deckel mit umbiegendem Rand und \textit{Mittelrippe} (Taf.~93.8) gruppieren (Abb.~\ref{fig:MUN87-213_T41_F87-02-14}--E, \ref{fig:MUN87.2-1-3_Planum+Profil_Zeichnung}).\footnote{Das oberste Verfüllpaket 1 (Abb.~\ref{fig:MUN87.2-1-3_Planum+Profil_Zeichnung}) ist mit rot verziegelten, etwa 1--5\,cm großen Tonbrocken, kleinen Holzkohle-Flittern und vielen, zum Teil komplett erhaltenen verkohlten Ölpalmen-Kernen durchmischt. Zwischen den Gefäßen 2 und 3 fand sich eine Konzentration verkohlter Palmkerne, die so dicht war, dass dazwischen fast kein anorganisches Material vorhanden gewesen sei. Unterhalb der obersten Gefäßsetzung befand sich die etwa 8--10\,cm mächtige Schicht~3, die vorwiegend aus 0,5--1\,cm kleinen roten Lateritpartikeln und etwa 2\,cm großen rot-weiß-verziegelten Tonstücken bestand. Diese zog sich vom südlichen Rand der Eingrabung bis etwa unter die nördliche Kante von Gefäß 2. In der Nähe von Gefäß 9, etwa 0,1\,m unter der Oberfläche, fanden sich mehrere große weiß- bis rotverziegelte Tonbrocken, die stark an die Wandung der Lehmwanne B des benachbarten Befundes MUN~87/2-1-1 erinnern (Kat.-Nr.~16).} Ab etwa 0,5--0,9\,m unter der rezenten Oberfläche formen die Gefäße 4--6 und 10--13 eine zweite Konzentration (Abb.~\ref{fig:MUN87-213_T106_H87-06-15}). Diese besteht aus dem auf der Mündung deponierten Gefäß 10\footnote{Gefäß 10 weist in seinem Boden ein etwa 8\,$\times$\,10\,cm großes Loch auf, das an einer Stelle eine alte, verrundete Bruchkante aufweist. Diese kann dahingehend gedeutet werden, dass das Loch im Zuge einer potenziellen Modifikation des Gefäßbodens vor der Deponierung entstanden sein kann \parencite[siehe][]{Wotzka.1993}.} (Taf.~93.3), um das auf der Seiten liegend sechs Pikunda-Munda-Schalen deponiert wurden (Taf.~92.6, 93.1--2, 4--5, 7). Zwischen den Gefäßen fand sich ein Miniaturgefäß (Taf.~92.9). Dieses weist durchaus stilistische Parallelen zu den Pikunda-Munda-Schalen auf.\footnote{Die kleine Schale ist nur etwa 4\,cm hoch (Taf.~92.9). Sie ist zwar eher \textit{grob} gefertigt, zeigt aber alle Charakteristika einer Pikunda-Munda-Schale: einen ausbiegenden Rand und konkave Wandung sowie runden Bauchumbruch und Boden. Die Verzierung besteht aus horizontalen und vertikalen Ritzlinien und erinnert grob an die häufig im Zusammenhang mit den Schalen des Pikunda-Munda-Stils zu beobachten Schachbrett- oder Leiterornamentik (Tab.~\ref{tab:Verzierungselemente}: 01.1--3).}
+Die obere Gefäßsetzung besteht aus fünf Schalen des Typs E3 (Taf.~92.1--4, 6), die sich um Gefäß 8 (Taf.~92.8), ein hohes Gefäß mit langer Schulter und ausbiegendem Rand vom Typ B1, und einen Teller oder Deckel mit umbiegendem Rand und \textit{Mittelrippe} (Taf.~93.8) gruppieren (Abb.~\ref{fig:MUN87-213_T41_F87-02-14}--E, \ref{fig:MUN87.2-1-3_Planum+Profil_Zeichnung}).\footnote{Das oberste Verfüllpaket 1 (Abb.~\ref{fig:MUN87.2-1-3_Planum+Profil_Zeichnung}) ist mit rot verziegelten, etwa 1--5\,cm großen Tonbrocken, kleinen Holzkohle-Flittern und vielen, zum Teil komplett erhaltenen verkohlten Ölpalmen-Kernen durchmischt. Zwischen den Gefäßen 2 und 3 fand sich eine Konzentration verkohlter Palmkerne, die so dicht war, dass dazwischen fast kein anorganisches Material vorhanden gewesen sei. Unterhalb der obersten Gefäßsetzung befand sich die etwa 8--10\,cm mächtige Schicht~3, die vorwiegend aus 0,5--1\,cm kleinen roten Lateritpartikeln und etwa 2\,cm großen rot-weiß-verziegelten Tonstücken bestand. Diese zog sich vom südlichen Rand der Eingrabung bis etwa unter die nördliche Kante von Gefäß 2. In der Nähe von Gefäß 9, etwa 0,1\,m unter der Oberfläche, fanden sich mehrere große weiß- bis rotverziegelte Tonbrocken, die stark an die Wandung der Lehmwanne B des benachbarten Befundes MUN~87/2-1-1 erinnern (Kat.-Nr.~16).} Ab etwa 0,5--0,9\,m unter der rezenten Oberfläche formen die Gefäße 4--6 und 10--13 eine zweite Konzentration (Abb.~\ref{fig:MUN87-213_T106_H87-06-15}). Diese besteht aus dem auf der Mündung deponierten Gefäß 10\footnote{Gefäß 10 weist in seinem Boden ein etwa 8\,$\times$\,10\,cm großes Loch auf, das an einer Stelle eine alte, verrundete Bruchkante aufweist. Diese kann dahingehend gedeutet werden, dass das Loch im Zuge einer potenziellen Modifikation des Gefäßbodens vor der Deponierung entstanden sein kann (siehe \textsc{Wotzka} 1993).} (Taf.~93.3), um das auf der Seiten liegend sechs Pikunda-Munda-Schalen deponiert wurden (Taf.~92.6, 93.1--2, 4--5, 7). Zwischen den Gefäßen fand sich ein Miniaturgefäß (Taf.~92.9). Dieses weist durchaus stilistische Parallelen zu den Pikunda-Munda-Schalen auf.\footnote{Die kleine Schale ist nur etwa 4\,cm hoch (Taf.~92.9). Sie ist zwar eher \textit{grob} gefertigt, zeigt aber alle Charakteristika einer Pikunda-Munda-Schale: einen ausbiegenden Rand und konkave Wandung sowie runden Bauchumbruch und Boden. Die Verzierung besteht aus horizontalen und vertikalen Ritzlinien und erinnert grob an die häufig im Zusammenhang mit den Schalen des Pikunda-Munda-Stils zu beobachten Schachbrett- oder Leiterornamentik (Tab.~\ref{tab:Verzierungselemente}: 01.1--3).}
 
 Aufgrund der starken Beeinträchtigungen durch das nachlaufende Regenwasser konnten ab dieser Tiefe keine Schichtgrenzen mehr erfasst werden.\footnote{Im Bereich der zweiten Gefäßsetzung enthielt die Verfüllung etwa 1--2\,cm große, rotgebrannte Tonpartikel, etwa 5\,mm große Lateritpartikel, 2--3\,cm große, schwarzgebrannte Ton- oder Lehmstücke und -- im östlichen Randbereich -- etwa 3\,cm große ungebrannte, dunkle Tonstücke. Holzkohle wurde über die gesamte Fläche gleichmäßig verteilt beobachtet. Unmittelbar unterhalb der Gefäßdeponierung war der Bereich nur wenig mit weiß- oder rotverziegelten Tonstücken, kleinsten Lateritflittern und Holzkohlestücken durchsetzt und zudem stark verfestigt. Um die Zone der dunklen Grubenfüllung lag ein etwa 0,1\,m breiter Bereich aus relativ homogenem, sterilem, gelbem, stark tonigen Material, das nach oben keine erkennbare Abgrenzung zum anstehenden gelben Lehm hat (Abb.~\ref{fig:MUN87-213_T114_H87-06-6}).} Bis etwa 0,8\,m unter der rezenten Oberfläche hatte die Grube einen mehr oder weniger zylindrischen Querschnitt, mit annähernd gerader Wandung. Weiter unterhalb lief sie zur Sohle hin spitz zu. An der Sohle fand sich ein einzelnes Gefäß (Taf.~93.6). 
 
